devel
-----

* Make AQL optimizer rule "splice-subqueries" mandatory, in the sense that it cannot be
  disabled anymore. As a side effect of this change, there will no query execution plans
  created by 3.8 that contain execution nodes of type `SubqueryNode`. `SubqueryNode`s
  will only be used during query planning and optimization, but at the end of the query
  optimization phase will all have been replaced with nodes of types `SubqueryStartNode`
  and `SubqueryEndNode`.
  The code to execute non-spliced subqueries remains in place so that 3.8 can still
  execute queries planned on a 3.7 instance with the "splice-subqueries" optimizer rule
  intentionally turned off. The code for executing non-spliced subqueries can be removed
  in 3.9.

* Normalize user-provided input/output directory names in
  arangoimport, arangoexport, arangodump and arangorestore 
  before splitting them into path components, in the sense that now 
  both forward and backward slashes can be used on Windows,
  even interchangingly.

* Added the following bit handling functions to AQL:

  - BIT_AND(array): and-combined result
  - BIT_OR(array): or-combined result
  - BIT_XOR(array): xor-combined result
  - BIT_NEGATE(value, bits): bitwise negation of `value`, with a mask of
    `bits` length
  - BIT_TEST(value, index): test if bit at position `index` is set in `value`
    (indexes are 0-based)
  - BIT_POPCOUNT(value): return number of bits set in `value`
  - BIT_SHIFT_LEFT(value, shift, bits): bitwise shift-left of `value` by 
    `shift` bits, with a mask of `bits` length
  - BIT_SHIFT_RIGHT(value, shift, bits): bitwise shift-right of `value` by 
    `shift` bits, with a mask of `bits` length
  - BIT_CONSTRUCT(array): construct a number with bits set at the positions
    given in the array
  - BIT_DECONSTRUCT(value): deconstruct a number into an array of its individual
    set bits
  - BIT_TO_STRING(value): create a bitstring representation from numeric `value`