@@ -1,6 +1,9 @@
 devel
 -----
 
+* Fix some issues with key generators not properly taking into account the
+  `allowUserKeys` attribute when in a cluster.
+
 * Make AQL optimizer rule "splice-subqueries" mandatory, in the sense that it cannot be
   disabled anymore. As a side effect of this change, there will no query execution plans
   created by 3.8 that contain execution nodes of type `SubqueryNode`. `SubqueryNode`s
